home.css
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  font-family: Inter, arial;
}

html,
body {
  background-color: #000000;
}

.hero-container {
  position: relative;
}
.top-nav {
  position: absolute;
  background: linear-gradient(
    180deg,
    rgba(0, 0, 0, 0.8) 0%,
    rgba(0, 0, 0, 0.7889) 8.333%,
    rgba(0, 0, 0, 0.7556) 16.67%,
    rgba(0, 0, 0, 0.7) 25%,
    rgba(0, 0, 0, 0.6222) 33.33%,
    rgba(0, 0, 0, 0.5222) 41.67%,
    rgba(0, 0, 0, 0.4) 50%,
    rgba(0, 0, 0, 0.2778) 58.33%,
    rgba(0, 0, 0, 0.1778) 66.67%,
    rgba(0, 0, 0, 0.1) 75%,
    rgba(0, 0, 0, 0.04444) 83.33%,
    rgba(0, 0, 0, 0.01111) 91.67%,
    rgba(0, 0, 0, 0) 100%
  );
  display: flex;
  justify-content: space-between;
  align-items: center;
  top: 0;
  width: 100%;
  padding: 1.8% 20%;
}

.action_btns {
  position: relative;
  display: flex;
  align-items: center;
  gap: 14px;
}

.language-cta {
  position: relative;
  display: flex;
  align-items: center;
  width: fit-content;
}

.language-cta .language {
  height: 16px;
  position: absolute;
  left: 0;
  margin: 0 0 0 10px;
}

.language-cta .chevron {
  height: 16px;
  position: absolute;
  right: 0;
  margin-right: 10px;
}

.top-nav img {
  height: 40px;
}

.top-nav .cta {
  display: flex;
}

select {
  appearance: none;
  overflow: hidden;
  padding: 7px 30px 7px 30px;
  background: rgba(0, 0, 0, 0.4);
  font-size: 14px;
  font-weight: 600;
  color: #ffffff;
  border-radius: 4px;
  line-height: 126%;
}

.background {
  position: relative;
}

.sign-in {
  padding: 8px 16px;
  border-radius: 4px;
  font-weight: 600;
  line-height: 126%;
  background-color: #e50914;
  font-size: 14px;
  color: #ffffff;
  border: none;
  outline: none;
}

.sign-in:hover {
  background-color: #c11119;
  transition: 0.3s ease-in;
  cursor: pointer;
}

.background img {
  width: 100%;
  height: 100vh;
  display: block;
  object-fit: cover;
  overflow: hidden;
  object-position: center;
  transform: scale(1);
}

.tint {
  position: absolute;
  top: 0;
  bottom: 0;
  right: 0;
  left: 0;
  background-image: linear-gradient(
    7deg,
    rgba(0, 0, 0, 0.85) 10%,
    rgba(0, 0, 0, 0.8465) 17.25%,
    rgba(0, 0, 0, 0.8361) 24.5%,
    rgba(0, 0, 0, 0.8187) 31.75%,
    rgba(0, 0, 0, 0.7944) 39%,
    rgba(0, 0, 0, 0.7632) 46.25%,
    rgba(0, 0, 0, 0.725) 53.5%,
    rgba(0, 0, 0, 0.6868) 60.75%,
    rgba(0, 0, 0, 0.6556) 68%,
    rgba(0, 0, 0, 0.6312) 75.25%,
    rgba(0, 0, 0, 0.6139) 82.5%,
    rgba(0, 0, 0, 0.6035) 89.75%,
    rgba(0, 0, 0, 0.6) 97%
  );
}

.content {
  position: absolute;
  top: 52%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.heading_content {
  width: 588px;
  text-align: center;
}

.heading_content .heading {
  font-weight: 900;
  color: #ffffff;
  font-size: 64px;
  margin-bottom: 16px;
}

.heading_content .subheading {
  font-weight: 600;
  color: #ffffff;
  font-size: 20px;
  margin-bottom: 32px;
}

.form .text {
  font-size: 16px;
  color: #ffffff;
  text-align: center;
}

.form .action {
  padding-top: 16px;
}

.action {
  display: flex;
  width: 100%;
  gap: 8px;
  padding-top: 16px;
}
.action input {
  flex: 1;
  padding: 16px;
  background-color: rgba(0, 0, 0, 0.5);
  border: 1px solid rgba(255, 255, 255, 0.6);
  border-radius: 4px;
  outline: none;
  color: #ffffff;
  font-size: 16px;
}

.action input::focus {
  background-color: rgba(0, 0, 0, 0.3);
  border: 1px solid rgba(255, 255, 255, 0.6);
}
.action input::active {
  background-color: rgba(0, 0, 0, 0.3);
  border: 1px solid rgba(255, 255, 255, 0.6);
}

.action input:-webkit-autofill,
.action input:-webkit-autofill:hover,
.action input:-webkit-autofill:focus,
.action input:-webkit-autofill:active {
  -webkit-text-fill-color: white;

  /* Required to override Chrome autofill */
  -webkit-box-shadow: 0 0 0 1000px rgba(0, 0, 0, 0.3) inset;
  transition: background-color 5000s ease-in-out 0s;
  border: 1px solid rgba(255, 255, 255, 0.6);
}

.action .cta {
  padding: 12px 24px;
  background: #e50914;
  color: #ffffff;
  font-size: 24px;
  font-weight: 600;
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  border-radius: 4px;
}

.action .cta:hover {
  background-color: #c11119;
  transition: 0.3s ease-in;
  cursor: pointer;
}
.trending {
  padding: 0 18%;
  margin: 26px 0 64px 0;
  position: relative;
}

.curves {
  position: absolute;
  left: 0;
  top: -56px;
  width: 100%;
  height: 60px;
  overflow: hidden;
}

.multiples {
  position: absolute;
  width: 120%;
  left: -12%;
  height: 100%;
}

.red_curve {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
  border-top-left-radius: 50% 100%;
  border-top-right-radius: 50% 100%;
  background: linear-gradient(
    to right,
    rgba(33, 13, 22, 1) 16%,
    rgba(184, 40, 105, 1),
    rgba(229, 9, 20, 1),
    rgba(184, 40, 105, 1),
    rgba(33, 13, 22, 1) 84%
  );
}

.black_curve {
  position: absolute;
  left:0.8%;
  top: 4px;
  width: 100%;
  height: 100%;
  border-top-left-radius: 43% 100%;
  border-top-right-radius: 43% 100%;
  background:
    radial-gradient(
      50% 100% at 50% 0%,
      rgba(64, 97, 231, 0.4) 0%,
      rgba(15, 12, 41, 0.8) 50%,
      rgba(0, 0, 0, 1) 100%), black;
    ),
    black;
}

.trending h1 {
  font-weight: 600;
  color: #ffffff;
  font-size: 24px;
  margin-bottom: 16px;
}

.trending .cards {
  position: relative;
  margin-top: 16px;
  display: flex;
  overflow-x: auto;
  padding:20px 0;
  scrollbar-width: none;
}

.trending .cards .card {
  position: relative;
  display: flex;
  align-items: flex-end;
  justify-content: flex-end;
  width:210px;
  flex-shrink:0;
  transition: transform 0.3s ease;
  cursor: pointer;
  margin: 0 0 0 8px;
}

.card_content{
  padding:8px 28px;
}
.trending .cards .card:hover{
transform: scale(1.08);
transform-origin: center;
z-index: 10;
}

.trending .cards .card img {
  width: 214px;
  height: 300px;
  object-fit: cover;
  border-radius: 8px;
  position: relative;
}

.trending .cards .card .number {
  position: absolute;
  font-family: NetflixSans, inter, arial;
  font-size: 120px;
  font-weight: 900;
  bottom: 24px;
  left: -26px;
  color: #000000;
  -webkit-text-stroke: 2px #d2d2d2;
  text-shadow: 0 0 1.5rem rgba(0, 0, 0, 0.5);
  line-height: 1;
}

.overlay{
position:absolute;
display:flex;
flex-direction:column;
justify-content:center;
align-items:flex-end;
height:100%;
width:34px;
top:0;
right:0;
background-color: #000000;
z-index:20;
}

.icon_container{
background-color:#1A1A1A;
height:120px;
width:24px;
border-radius:8px;
display:flex;
flex-direction:column;
justify-content:center;
}

.icon_container:hover{
  background-color:#333333;
  transition:0.08s ease-in;
}

.icon_container img{
  margin: 0 2px 0 0;
}


.reason {
  padding: 0 18%;
  color: #ffffff;
}

.reason h1 {
  font-weight: 600;
  color: #ffffff;
  font-size: 24px;
  margin-bottom: 16px;
}

.reason_cards {
  display: flex;
  gap: 24px;
  margin-bottom: 64px;
}

.reason_cards .card {
  padding: 24px;
  min-height: 280px;
  background: linear-gradient(
    135deg,
    #1f2a44 0%,
    #1a1a3a 40%,
    #1b1028 70%,
    #2a0b1e 100%
  );
  border-radius: 14px;
  flex: 1;
  display: flex;
  position: relative;
  align-items: flex-start;
  flex-direction: column;
}

.reason_cards .card h5 {
  font-size: 24px;
  font-weight: 600;
  margin-bottom: 16px;
}
.reason_cards .card p {
  font-size: 16px;
  font-weight: 400;
  color: #ffffffb3;
  margin-bottom: 16px;
}
.reason_cards .card .image {
  width: 100%;
  display: flex;
  justify-content: flex-end;
  margin-top: auto;
}

.reason_cards .card img {
  bottom: 0;
  right: 0;
  height: 72px;
  margin-top: 20px;
}


.faq {
  padding: 0 18%;
  color: #ffffff;
  margin-bottom: 64px;
}

.faq h1 {
  font-weight: 600;
  color: #ffffff;
  font-size: 24px;
  margin-bottom: 16px;
}

.faq_Cards {
  display: flex;
  flex-direction: column;
  gap: 10px;
}

.faq_Cards .card {
  padding: 24px;
  font-size: 24px;
  font-weight: 400;
  background-color: #2d2d2d;
  display: flex;
}
.faq_Cards .card p {
  width: 100%;
}

.faq_Cards .card img {
  height: 30px;
}

.faq_Cards .card:hover {
  background-color: #414141;
  transition: 0.3s ease-in;
  cursor: pointer;
}

.bottom_form {
  padding: 0 18%;
  margin-bottom: 64px;
}
.bottom_form .text {
  font-size: 16px;
  color: #ffffff;
  text-align: center;
}

.bottom_form .action {
  padding: 16px 16% 0;
}
.footer {
  padding: 0 18%;
  margin-bottom: 64px;
  color: #ffffffb3;
}

.call span a {
  color: #ffffffb3;
}

.links {
  display: flex;
  margin-top: 36px;
}

.links .list {
  display: flex;
  flex-direction: column;
  flex: 1;
  gap: 12px;
}

.links .list li {
  width: 100%;
  text-decoration: none;
  list-style: none;
}

.links .list a {
  color: #ffffffb3;
  font-size: 14px;
}

.bottom {
  margin-top: 42px;
}

.netflix_in {
  margin-top: 42px;
  color: #ffffffb3;
  font-size: 14px;
}

.captcha {
  margin-top: 42px;
  color: #ffffffb3;
  font-size: 12px;
}

.captcha p {
  color: rgba(255, 255, 255, 0.6);
}

.captcha a {
  color: #448ef4;
  font-size: 14px;
  opacity: 1;
}

